# PixelMindAI

./: .env.example  .eslintrc.js  .gitignore  .prettierignore  LICENSE  PixelMind_AI_PRD_v1.1_ZeroBudget.docx  PixelMind_AI_SprintPlan.docx  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: backend.yml  frontend.yml  security.yml
apps/api/: Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt
apps/api/app/: __init__.py
apps/api/app/api/v1/endpoints/: auth.py  files.py  health.py  jobs.py  tools.py
apps/api/app/core/: queue.py  security.py  storage.py
apps/api/app/cv/: preprocessing.py
apps/api/app/cv/ocr/: engine.py
apps/api/app/cv/tools/: business_card_scanner.py  invoice_reader.py  receipt_scanner.py
apps/api/app/db/: session.py
apps/api/app/db/migrations/: env.py
apps/api/app/db/models/: base.py  job.py  tool.py  user.py
apps/api/app/middleware/: rate_limit.py
apps/api/app/utils/: auth_deps.py
apps/api/app/workers/: worker.py
apps/api/tests/: conftest.py  test_health.py  test_receipt_scanner.py
apps/api/tests/integration/: test_api_ocr.py
apps/web/: index.html  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/web/src/: App.tsx  main.tsx
apps/web/src/components/common/: ProtectedRoute.tsx
apps/web/src/components/layout/: AppLayout.tsx  Sidebar.tsx
apps/web/src/components/tools/: JobPoller.tsx  ResultPanels.tsx
apps/web/src/hooks/: useJobPoller.ts
apps/web/src/pages/: LandingPage.tsx  PricingPage.tsx
apps/web/src/pages/account/: AccountPage.tsx
apps/web/src/pages/dashboard/: DashboardPage.tsx
apps/web/src/pages/tools/: ToolPage.tsx
apps/web/src/styles/: globals.css
apps/web/src/test/: LandingPage.test.tsx  ToolComponents.test.tsx
apps/web/src/types/: index.ts
backend/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  render.yaml  requirements.txt
backend/app/api/v1/endpoints/: files.py  health.py  jobs.py  tools.py
backend/app/core/: config.py  errors.py  queue.py
backend/app/cv/: preprocessing.py
backend/app/cv/agriculture/: plant_disease_detector.py
backend/app/cv/ai/: __init__.py  language_client.py
backend/app/cv/business/: shelf_counter.py
backend/app/cv/creator/: caption_lens.py  caption_lens_v2.py  meme_generator.py  thumbnail_analyzer.py  video_thumbnail_extractor.py
backend/app/cv/data/: passport_specs.json
backend/app/cv/entertainment/: age_predictor.py
backend/app/cv/photo/: background_remover.py  deepfake_detector.py  face_blur.py  image_upscaler.py  passport_photo.py  preprocessing_photo.py  profile_picture_styler.py  resume_photo_optimizer.py
backend/app/cv/tools/: document_scanner.py  form_field_reader.py  handwriting_ocr.py  menu_scanner.py  signature_extractor.py
backend/app/db/: session.py
backend/app/db/migrations/versions/: 28b3d05baaf5_initial_schema_users_files_processing_.py
backend/app/workers/: worker.py
backend/docs/: DEPLOYMENT.md
backend/tests/: test_background_remover.py  test_business_card_scanner.py  test_deepfake_detector.py  test_document_scanner.py  test_face_blur.py  test_form_field_reader.py  test_handwriting_ocr.py  test_image_upscaler.py  test_invoice_reader.py  test_menu_scanner.py  test_passport_photo.py  test_preprocessing_photo.py  test_profile_picture_styler.py  test_resume_photo_optimizer.py  test_signature_extractor.py  test_sprint5_creator_core.py
docs/: ARCHITECTURE.md
frontend/: .env.example  README.md  commitlint.config.js  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vercel.json  vite.config.ts
frontend/.husky/: pre-push
frontend/docs/: DEPLOYMENT.md
frontend/src/components/layout/: AuthLayout.tsx  Header.tsx  Sidebar.tsx
frontend/src/components/tools/: FileDropzone.tsx  JobPoller.tsx  ResultPanels.tsx  Sprint4ResultPanels.tsx  Sprint5ResultPanels.tsx
frontend/src/hooks/: useCurrentUser.ts
frontend/src/lib/: api.ts
frontend/src/pages/: LandingPage.tsx  NotFoundPage.tsx  PricingPage.tsx
frontend/src/pages/auth/: LoginPage.tsx  RegisterPage.tsx
frontend/src/pages/dashboard/: DashboardPage.tsx
frontend/src/pages/tools/: ToolPage.tsx
frontend/src/stores/: authStore.ts
frontend/src/test/: LandingPage.test.tsx  Sprint4Panels.test.tsx  Sprint5Panels.test.tsx
frontend/src/types/: index.ts
infra/docker/: docker-compose.yml
infra/fly/: fly.toml
scripts/: seed_tools.py  setup.sh
